# AgentOS

./: .gitignore  README.md  apiroutes.py  main.py  pyproject.toml  requirements.txt  vercel.json
agents/: __init__.py  monitor_agent.py  ops_agent.py  security_agent.py  storage_agent.py
api/: index.py
core/: __init__.py  message_bus.py  models.py  storage.py  transactions.py
data/: state.json
move/: Move.toml  Published.toml
move/sources/: action_log.move  agent_factory.move  agent_registry.move  agent_wallet.move
move/sources/examples/: prediction_agent.move  trader_agent.move  yield_agent.move
runtime/: __init__.py  agent_registry.py  api.py  event_bus.py  llm.py  onchain.py  sui_client.py  walrus_client.py
runtime/agents/: __init__.py  prediction_agent.py  trader_agent.py  yield_agent.py
ui/: api.html  contracts.html  dashboard.html  dashboard.js  deploy.html  deploy.js  index.html  package-lock.json  package.json  prediction.html  script.js  styles.css  subpage.css  trader.html  vite.config.js  yield.html
ui/assets/css/: style.css
ui/assets/js/: studio.js
