[project]
name = "agentos"
version = "0.1.0"
description = "AgentOS — Autonomous cloud operations platform powering Nimbus Grid"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "websockets>=12.0",
    "pydantic>=2.0",
    "aiofiles>=23.0",
    "httpx>=0.27.0",
    "groq>=1.0.0",
    "python-dotenv>=1.0.0",
    "requests>=2.30.0",
    "click>=8.0.0",
]

[project.scripts]
agentos = "main:main"
